--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/bridge",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "out/init.lua",
   "scripts": {
     "build": "rbxtsc",
@@ -19,6 +19,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RsMan-Dev/rbxts-bridge.git"
+  },
   "devDependencies": {
     "@rbxts/compiler-types": "^3.0.0-types.0",
     "@rbxts/types": "^1.0.848",
@@ -33,7 +37,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@rbxts/jsnatives": "^1.0.0",
+    "@rbxts/jsnatives": "^1.1.0",
     "@rbxts/services": "^1.5.5"
   }
 }
